<resources>
    <string name="app_name">Club Deportivo</string>
    <string name="profesor_menu">Profesores</string>
    <string name="add_profesor">Registrar profesor</string>
    <string name="update_profesor">Modificar profesor</string>
    <string name="add_profesor_OK">¡Profesor registrado con éxito!</string>
    <string name="add_pago_OK">¡Pago registrado con éxito!</string>
    <string name="actividad_sin_cupo">¡Actividad sin Cupo Disponible!</string>
    <string name="comprobante">Comprobante de Pago</string>
    <string name="attendance_profesor">Asistencia</string>
    <string name="plantel">Plantel</string>
    <string name="detail_profesor">Detalle</string>
    <string name="search_client">Buscar cliente</string>
    <string name="add_client">Registrar cliente</string>
    <string name="overdue_client">Socios cuya cuota vence hoy</string>
    <string name="btn_back_description">Botón para volver atrás</string>
    <string name="buscar">Buscar</string>
    <string name="registrarpago">"Registrar\npago"</string>
    <string name="registrarpagocuota">"Registrar\nPago Cuota"</string>
    <string name="registrarpagoactividad">"Registrar\nPago Actividad"</string>
    <string name="dni">"DNI"</string>
    <string name="cliente">"Cliente Nº"</string>
    <string name="nombre_apellido">"Nombre y Apellido"</string>
    <string name="socio">"Socio"</string>
    <string name="pagarcuota">"Pagar cuota"</string>
    <string name="pagaractividad">"Pagar actividad"</string>
    <string name="pagar">"Pagar"</string>
    <string name="assign_activity">Asigná una actividad</string>
    <string name="you_selected">Seleccionaste:</string>
    <string name="attendance_days">Días de atención</string>
    <string name="start_time">Hora de inicio</string>
    <string name="end_time">Hora de fin</string>
    <string name="save">Guardar</string>


    <string-array name="options_example">
        <item/>
        <item>Natación</item>
        <item>Fútbol</item>
        <item>Gimnasia</item>
        <item>Tenis</item>
        <item>Yoga</item>
    </string-array>
</resources>