<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Window"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_gravity="left"
        android:orientation="vertical">

        <ImageView
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_gravity="left"
            android:src="@drawable/logo_app" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">

        <!-- Botón atrás -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_gravity="right"
            style="@style/BtnBack"
            android:contentDescription="@string/btn_back_description" />


        <!-- Título -->
        <TextView
            style="@style/MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/registrarpago" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18sp"
            android:autofillHints=""
            android:hint="@string/dni"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuscar"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>

