<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="40dp">

    <!-- Header común -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Botón atrás -->
        <ImageButton
            android:id="@+id/btnBack"
            style="@style/BtnBack"
            android:contentDescription="@string/btn_back_description" />

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/registrarpago"
            android:layout_marginBottom="50dp"
            style="@style/MainTitle"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp">

        <EditText
            android:id="@+id/inputSearchClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="48sp"
            android:hint="Buscar"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_search"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearchClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buscar"
        android:enabled="false"
        style="@style/ButtonOptionGreen"
        android:layout_marginBottom="100sp"
        android:paddingHorizontal="32sp"/>

    <TableLayout
        android:id="@+id/tlClientData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="50sp"
        android:visibility="invisible">

        <TableRow>
            <TextView android:text="Cliente N°" style="@style/LabelSearchClient"/>
            <TextView android:text="1234" style="@style/RowSearchClient" android:id="@+id/tvClientId"/>
        </TableRow>

        <TableRow>
            <TextView android:text="Cliente" style="@style/LabelSearchClient"/>
            <TextView android:text="Pepito Fulano" style="@style/RowSearchClient" android:id="@+id/tvClientName"/>
        </TableRow>

        <TableRow>
            <TextView android:text="Tipo" style="@style/LabelSearchClient"/>
            <TextView android:text="Socio" style="@style/RowSearchClient" android:id="@+id/tvClientType"/>
        </TableRow>

        <TableRow>
            <TextView android:text="Estado" style="@style/LabelSearchClient"/>
            <TextView android:text="Activo" style="@style/RowSearchClient" android:id="@+id/tvClientStatus"/>
        </TableRow>

    </TableLayout>



    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPagarCuota"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagarcuota"
            android:visibility="invisible"
            android:layout_marginBottom="20sp"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:textAllCaps="false" />


        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPagarActividad"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/pagaractividad"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:textAllCaps="false" />


</LinearLayout>

